sass/partials/_questionnaire.scss
p.body {
  font-size: 1.25em;
}

#rcads-categories {
  ul {
    margin: 2em auto;
    width: 70%;
  }

  [type="checkbox"] + label {
    font-size: 1.2rem;
  }
}

#rcads-questions {
  margin-bottom: 2em;
  text-align: center;
}

#rcads-answers {
  margin-bottom: 2em;
}

.question-container {
  height: 100vh;

  &:first-child {
    margin-top: 12vh;
  }
}

.question {
  background-color: $primary-light;
  margin: 20vh 0 25vh 0;
  .radio {
    display: inline-block;
  }

  input[type="radio"] + label {
    padding: 0 0.4em;
    border-radius: 2px;
    background-color: $primary-lighter;
    color: $primary-dark;
  }

  input[type="radio"] + label:before,
  input[type="radio"] + label:after {
    display: none;
  }

  input[type="radio"]:checked + label {
    background-color: $primary-dark;
    color: $primary-light;
  }

  .answers {
    text-align: center;
    margin: 2em 0 1.5em 0;
  }
}

.answer, .history {
  background-color: $primary-light;
}

.history {
  &.waves-effect {
    display: block;
  }

  .share {
    margin-right: 0 !important;
  }

  .card-action {
    border-top: 1px solid $primary-lighter;
    padding-bottom: 0;
  }

  .card-action:hover {
    cursor: pointer;
  }
}

.arrow {
  i {
    font-size: 3em;
  }
}

